--- a/src/app/feedback/feedback.component.html
+++ b/src/app/feedback/feedback.component.html
@@ -32,8 +32,8 @@
     </form>
 
     <div *ngIf="successMessage">
-        <span class="text-danger center">{{successMessage}}</span>
+        <span style="color: wheat;">{{successMessage}}</span>
     </div>
 
 </div>
-<button class="btn btn-primary center" [routerLink]="['/feedback/viewFeedBack']">View FeedBack</button>
+<button class="btn btn-primary center" [routerLink]="['/feedback/viewFeedBack']">View FeedBacks</button>
