--- a/src/app/education/add-education/add-education.component.html
+++ b/src/app/education/add-education/add-education.component.html
@@ -41,7 +41,9 @@
             </button> &nbsp;
             <button class="btn btn-primary" type="reset" [disabled]="addEduForm.invalid">
                 Reset
-            </button>
+            </button>  &nbsp;
+            <button class="btn btn-primary" type="button" routerLink='/education'>Back</button> &nbsp;
+
         </div>
     </form>
     <div *ngIf="successMessage"> 
